disable beta tag
Signed-off-by: Nikhil Nigade <nikhil@dezinezync.com>

--- a/_posts/2023-12-04-560.md
+++ b/_posts/2023-12-04-560.md
@@ -3,7 +3,7 @@ title: 2023.11.2 (560)
 version: 560
 shortVersion: 2023.11.2
 dist: Elytra-560.zip
-isBeta: true
+isBeta: false
 date: 2023-12-04 07:07:00 +0530
 size: 15514637
 edSig: Qh4uIx0VTcxa8vgPkZcvsVrdqOlMtwfQiCfGZiu1wsFCeC4sfnk1BU9xYf74ULfAhEVqQnaQVeuMWOGS3n7WDw==
