--- a/_posts/2024-01-11-567.md
+++ b/_posts/2024-01-11-567.md
@@ -12,7 +12,7 @@ minVer: 13.0
 
 ### 2024.1.0
 
-Major improvements to the app, multiple bug fixes, and more coming soon...
+The January release contains Major improvements to the app, multiple bug fixes, and more coming soon...
 
 Please send feedback, suggestions, and crash reports to support@elytra.app 
 
