--- a/_posts/2024-02-03-573.md
+++ b/_posts/2024-02-03-573.md
@@ -12,6 +12,8 @@ minVer: 13.0
 
 ### 2024.2.0
 
+**RC Release**
+
 Major improvements to the app, multiple bug fixes, and more coming soon...
 
 - Fixed taking changes from folder updates (feeds added, removed)
@@ -26,3 +28,4 @@ Major improvements to the app, multiple bug fixes, and more coming soon...
 
 - Fixed local notifications title and body being swapped. Title articles/excerpts will now be readable.
 
+- Fixed a bug where adding/deleting feeds would require an app restart for it to take effect.
