--- a/_posts/2024-02-03-573.md
+++ b/_posts/2024-02-03-573.md
@@ -12,7 +12,7 @@ minVer: 13.0
 
 ### 2024.2.0
 
-**RC Release**
+**Release Candidate**
 
 Major improvements to the app, multiple bug fixes, and more coming soon...
 
