new beta release
Signed-off-by: Nikhil Nigade <nikhil@dezinezync.com>

--- a/_posts/2024-04-09-581.md
+++ b/_posts/2024-04-09-581.md
@@ -6,7 +6,7 @@ dist: Elytra-581.zip
 isBeta: true
 date: 2024-04-09 11:54:00 +0530
 size: 15809649
-edSig: "GXYIGABzUM3mMhVZMb5pv9TRGoh85iEZSz4xjMWqnCzgDFj2MoE4kELd/OeW1APnKx03ee1E29MjPzvpoVKiBQ==
+edSig: GXYIGABzUM3mMhVZMb5pv9TRGoh85iEZSz4xjMWqnCzgDFj2MoE4kELd/OeW1APnKx03ee1E29MjPzvpoVKiBQ==
 minVer: 13.0
 ---
 
