update beta release notes
Signed-off-by: Nikhil Nigade <nikhil@dezinezync.com>

--- a/_posts/2024-04-10-588.md
+++ b/_posts/2024-04-10-588.md
@@ -12,6 +12,8 @@ minVer: 13.0
 
 ### 2024.4.0
 
+- Fixed a crashing bug that would sometimes occur when adding a new feed.
+
 - Fixed syncing of feed updates and changes across devices.
 
 - Improved sync: changes to feeds and folders are now picked up before syncing articles begins. 
@@ -20,9 +22,7 @@ minVer: 13.0
 
 - Fixed a bug where articles with no explict cover image assigned, would show no cover image, if it had an image enclosure. 
 
-- Fixed a bug where article enclosures without any articles would linger around consuming disk space. These are now cleaned up when the app starts.
-
-- Build using Xcode 15.3
+- Fixed a bug where article enclosures without any articles would linger around consuming disk space. These are now cleaned up when the app starts. 
 
 ### 2024.2.2
 
