fix release notes
Signed-off-by: Nikhil Nigade <nikhil@dezinezync.com>

--- a/_posts/2024-04-10-589.md
+++ b/_posts/2024-04-10-589.md
@@ -10,6 +10,10 @@ edSig: mmOqRyKt8iSM4BOzShBg7PaJHIkSmonx4TBZTpm9OfTiIJVkri140Rvy5zFd48d7gJoLG+5c3
 minVer: 13.0
 ---
 
+### 2024.4.1
+
+- Fixed bug where local feed preferences were sometimes overwritten during sync.
+
 ### 2024.4.0
 
 - Fixed a crashing bug that would sometimes occur when adding a new feed.
@@ -23,11 +27,3 @@ minVer: 13.0
 - Fixed a bug where articles with no explict cover image assigned, would show no cover image, if it had an image enclosure. 
 
 - Fixed a bug where article enclosures without any articles would linger around consuming disk space. These are now cleaned up when the app starts. 
-
-### 2024.2.2
-
-- Fixed syncing of feed updates and changes across devices.
-
-### 2024.2.1
-
-- Fixed a crash that would sometimes occur when adding a Youtube channel.
